<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/product_ImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_add_circle_black_24dp" />

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>
    <!-- Product info category -->
    <LinearLayout
        android:id="@+id/product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_info" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_pieces"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/pieces" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="-" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_CZK"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/CZK" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_supplier_address"
                style="@style/EditorFieldStyle"
                android:width="0dp"
                android:layout_weight="2"
                android:hint="@string/hint_supplier_address"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>